fix: category - text-align

--- a/less/post.less
+++ b/less/post.less
@@ -34,6 +34,7 @@
   &__category {
     font-size: 12px;
     margin-left: auto;
+    text-align: right;
   }
 
   &__time {
